--- a/src/app/performance-report/performance-report.component.html
+++ b/src/app/performance-report/performance-report.component.html
@@ -1,5 +1,6 @@
 <div class="header">
     <div class="collegeLogo">
+        <!-- This is banner -->
         <!-- <img src="/assets//media/bcrec-header.jpg"> -->
     </div>
     <div class="logout">
